lab3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> instructions_opt
Rule 3     instructions_opt -> instructions
Rule 4     instructions_opt -> <empty>
Rule 5     instructions -> instructions instruction
Rule 6     instructions -> instruction
Rule 7     instruction -> sys_instruction ;
Rule 8     instruction -> assignment ;
Rule 9     instruction -> { instructions }
Rule 10    sys_instruction -> RETURN expression
Rule 11    sys_instruction -> BREAK
Rule 12    sys_instruction -> CONTINUE
Rule 13    sys_instruction -> PRINT print_values
Rule 14    instruction -> IF ( condition ) instruction
Rule 15    instruction -> IF ( condition ) instruction ELSE instruction
Rule 16    instruction -> FOR var = range instruction
Rule 17    range -> expression : expression
Rule 18    instruction -> WHILE ( condition ) instruction
Rule 19    assignment -> var assignment_operator expression
Rule 20    assignment -> matrix_element assignment_operator expression
Rule 21    assignment -> vector_element assignment_operator expression
Rule 22    assignment_operator -> =
Rule 23    assignment_operator -> ADDASSIGN
Rule 24    assignment_operator -> SUBASSIGN
Rule 25    assignment_operator -> MULASSIGN
Rule 26    assignment_operator -> DIVASSIGN
Rule 27    matrix -> [ vectors ]
Rule 28    vector -> [ variables ]
Rule 29    vectors -> vectors , vector
Rule 30    vectors -> vector
Rule 31    matrix_function -> function_name ( INTNUM )
Rule 32    function_name -> EYE
Rule 33    function_name -> ONES
Rule 34    function_name -> ZEROS
Rule 35    var -> ID
Rule 36    number -> INTNUM
Rule 37    number -> FLOATNUM
Rule 38    string -> STRING
Rule 39    variable -> number
Rule 40    variable -> var
Rule 41    variable -> element
Rule 42    vector_element -> ID [ INTNUM ]
Rule 43    matrix_element -> ID [ INTNUM , INTNUM ]
Rule 44    element -> vector_element
Rule 45    element -> matrix_element
Rule 46    variables -> variables , variable
Rule 47    variables -> variable
Rule 48    expression -> number
Rule 49    expression -> var
Rule 50    expression -> matrix
Rule 51    expression -> matrix_function
Rule 52    expression -> uminus
Rule 53    expression -> transposition
Rule 54    expression -> matrix_element
Rule 55    expression -> vector_element
Rule 56    expression -> expression + expression
Rule 57    expression -> expression - expression
Rule 58    expression -> expression * expression
Rule 59    expression -> expression / expression
Rule 60    expression -> expression DOTADD expression
Rule 61    expression -> expression DOTSUB expression
Rule 62    expression -> expression DOTMUL expression
Rule 63    expression -> expression DOTDIV expression
Rule 64    condition -> expression EQ expression
Rule 65    condition -> expression NE expression
Rule 66    condition -> expression LE expression
Rule 67    condition -> expression GE expression
Rule 68    condition -> expression LT expression
Rule 69    condition -> expression GT expression
Rule 70    uminus -> - expression
Rule 71    transposition -> expression '
Rule 72    print_values -> print_values , string
Rule 73    print_values -> print_values , expression
Rule 74    print_values -> string
Rule 75    print_values -> expression

Terminals, with rules where they appear

'                    : 71
(                    : 14 15 18 31
)                    : 14 15 18 31
*                    : 58
+                    : 56
,                    : 29 43 46 72 73
-                    : 57 70
/                    : 59
:                    : 17
;                    : 7 8
=                    : 16 22
ADDASSIGN            : 23
BREAK                : 11
CONTINUE             : 12
DIVASSIGN            : 26
DOTADD               : 60
DOTDIV               : 63
DOTMUL               : 62
DOTSUB               : 61
ELSE                 : 15
EQ                   : 64
EYE                  : 32
FLOATNUM             : 37
FOR                  : 16
GE                   : 67
GT                   : 69
ID                   : 35 42 43
IF                   : 14 15
INTNUM               : 31 36 42 43 43
LE                   : 66
LT                   : 68
MULASSIGN            : 25
NE                   : 65
ONES                 : 33
PRINT                : 13
RETURN               : 10
STRING               : 38
SUBASSIGN            : 24
WHILE                : 18
ZEROS                : 34
[                    : 27 28 42 43
]                    : 27 28 42 43
error                : 
{                    : 9
}                    : 9

Nonterminals, with rules where they appear

assignment           : 8
assignment_operator  : 19 20 21
condition            : 14 15 18
element              : 41
empty                : 
expression           : 10 17 17 19 20 21 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 71 73 75
function_name        : 31
instruction          : 5 6 14 15 15 16 18
instructions         : 3 5 9
instructions_opt     : 2
matrix               : 50
matrix_element       : 20 45 54
matrix_function      : 51
number               : 39 48
print_values         : 13 72 73
program              : 0
range                : 16
string               : 72 74
sys_instruction      : 7
transposition        : 53
uminus               : 52
var                  : 16 19 40 49
variable             : 46 47
variables            : 28 46
vector               : 29 30
vector_element       : 21 44 55
vectors              : 27 29

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . instructions_opt
    (3) instructions_opt -> . instructions
    (4) instructions_opt -> .
    (5) instructions -> . instructions instruction
    (6) instructions -> . instruction
    (7) instruction -> . sys_instruction ;
    (8) instruction -> . assignment ;
    (9) instruction -> . { instructions }
    (14) instruction -> . IF ( condition ) instruction
    (15) instruction -> . IF ( condition ) instruction ELSE instruction
    (16) instruction -> . FOR var = range instruction
    (18) instruction -> . WHILE ( condition ) instruction
    (10) sys_instruction -> . RETURN expression
    (11) sys_instruction -> . BREAK
    (12) sys_instruction -> . CONTINUE
    (13) sys_instruction -> . PRINT print_values
    (19) assignment -> . var assignment_operator expression
    (20) assignment -> . matrix_element assignment_operator expression
    (21) assignment -> . vector_element assignment_operator expression
    (35) var -> . ID
    (43) matrix_element -> . ID [ INTNUM , INTNUM ]
    (42) vector_element -> . ID [ INTNUM ]

    $end            reduce using rule 4 (instructions_opt -> .)
    {               shift and go to state 7
    IF              shift and go to state 8
    FOR             shift and go to state 9
    WHILE           shift and go to state 11
    RETURN          shift and go to state 12
    BREAK           shift and go to state 13
    CONTINUE        shift and go to state 14
    PRINT           shift and go to state 15
    ID              shift and go to state 18

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    sys_instruction                shift and go to state 5
    assignment                     shift and go to state 6
    var                            shift and go to state 10
    matrix_element                 shift and go to state 16
    vector_element                 shift and go to state 17

state 1

    (0) S' -> program .



state 2

    (2) program -> instructions_opt .

    $end            reduce using rule 2 (program -> instructions_opt .)


state 3

    (3) instructions_opt -> instructions .
    (5) instructions -> instructions . instruction
    (7) instruction -> . sys_instruction ;
    (8) instruction -> . assignment ;
    (9) instruction -> . { instructions }
    (14) instruction -> . IF ( condition ) instruction
    (15) instruction -> . IF ( condition ) instruction ELSE instruction
    (16) instruction -> . FOR var = range instruction
    (18) instruction -> . WHILE ( condition ) instruction
    (10) sys_instruction -> . RETURN expression
    (11) sys_instruction -> . BREAK
    (12) sys_instruction -> . CONTINUE
    (13) sys_instruction -> . PRINT print_values
    (19) assignment -> . var assignment_operator expression
    (20) assignment -> . matrix_element assignment_operator expression
    (21) assignment -> . vector_element assignment_operator expression
    (35) var -> . ID
    (43) matrix_element -> . ID [ INTNUM , INTNUM ]
    (42) vector_element -> . ID [ INTNUM ]

    $end            reduce using rule 3 (instructions_opt -> instructions .)
    {               shift and go to state 7
    IF              shift and go to state 8
    FOR             shift and go to state 9
    WHILE           shift and go to state 11
    RETURN          shift and go to state 12
    BREAK           shift and go to state 13
    CONTINUE        shift and go to state 14
    PRINT           shift and go to state 15
    ID              shift and go to state 18

    instruction                    shift and go to state 19
    sys_instruction                shift and go to state 5
    assignment                     shift and go to state 6
    var                            shift and go to state 10
    matrix_element                 shift and go to state 16
    vector_element                 shift and go to state 17

state 4

    (6) instructions -> instruction .

    {               reduce using rule 6 (instructions -> instruction .)
    IF              reduce using rule 6 (instructions -> instruction .)
    FOR             reduce using rule 6 (instructions -> instruction .)
    WHILE           reduce using rule 6 (instructions -> instruction .)
    RETURN          reduce using rule 6 (instructions -> instruction .)
    BREAK           reduce using rule 6 (instructions -> instruction .)
    CONTINUE        reduce using rule 6 (instructions -> instruction .)
    PRINT           reduce using rule 6 (instructions -> instruction .)
    ID              reduce using rule 6 (instructions -> instruction .)
    $end            reduce using rule 6 (instructions -> instruction .)
    }               reduce using rule 6 (instructions -> instruction .)


state 5

    (7) instruction -> sys_instruction . ;

    ;               shift and go to state 20


state 6

    (8) instruction -> assignment . ;

    ;               shift and go to state 21


state 7

    (9) instruction -> { . instructions }
    (5) instructions -> . instructions instruction
    (6) instructions -> . instruction
    (7) instruction -> . sys_instruction ;
    (8) instruction -> . assignment ;
    (9) instruction -> . { instructions }
    (14) instruction -> . IF ( condition ) instruction
    (15) instruction -> . IF ( condition ) instruction ELSE instruction
    (16) instruction -> . FOR var = range instruction
    (18) instruction -> . WHILE ( condition ) instruction
    (10) sys_instruction -> . RETURN expression
    (11) sys_instruction -> . BREAK
    (12) sys_instruction -> . CONTINUE
    (13) sys_instruction -> . PRINT print_values
    (19) assignment -> . var assignment_operator expression
    (20) assignment -> . matrix_element assignment_operator expression
    (21) assignment -> . vector_element assignment_operator expression
    (35) var -> . ID
    (43) matrix_element -> . ID [ INTNUM , INTNUM ]
    (42) vector_element -> . ID [ INTNUM ]

    {               shift and go to state 7
    IF              shift and go to state 8
    FOR             shift and go to state 9
    WHILE           shift and go to state 11
    RETURN          shift and go to state 12
    BREAK           shift and go to state 13
    CONTINUE        shift and go to state 14
    PRINT           shift and go to state 15
    ID              shift and go to state 18

    instructions                   shift and go to state 22
    instruction                    shift and go to state 4
    sys_instruction                shift and go to state 5
    assignment                     shift and go to state 6
    var                            shift and go to state 10
    matrix_element                 shift and go to state 16
    vector_element                 shift and go to state 17

state 8

    (14) instruction -> IF . ( condition ) instruction
    (15) instruction -> IF . ( condition ) instruction ELSE instruction

    (               shift and go to state 23


state 9

    (16) instruction -> FOR . var = range instruction
    (35) var -> . ID

    ID              shift and go to state 25

    var                            shift and go to state 24

state 10

    (19) assignment -> var . assignment_operator expression
    (22) assignment_operator -> . =
    (23) assignment_operator -> . ADDASSIGN
    (24) assignment_operator -> . SUBASSIGN
    (25) assignment_operator -> . MULASSIGN
    (26) assignment_operator -> . DIVASSIGN

    =               shift and go to state 27
    ADDASSIGN       shift and go to state 28
    SUBASSIGN       shift and go to state 29
    MULASSIGN       shift and go to state 30
    DIVASSIGN       shift and go to state 31

    assignment_operator            shift and go to state 26

state 11

    (18) instruction -> WHILE . ( condition ) instruction

    (               shift and go to state 32


state 12

    (10) sys_instruction -> RETURN . expression
    (48) expression -> . number
    (49) expression -> . var
    (50) expression -> . matrix
    (51) expression -> . matrix_function
    (52) expression -> . uminus
    (53) expression -> . transposition
    (54) expression -> . matrix_element
    (55) expression -> . vector_element
    (56) expression -> . expression + expression
    (57) expression -> . expression - expression
    (58) expression -> . expression * expression
    (59) expression -> . expression / expression
    (60) expression -> . expression DOTADD expression
    (61) expression -> . expression DOTSUB expression
    (62) expression -> . expression DOTMUL expression
    (63) expression -> . expression DOTDIV expression
    (36) number -> . INTNUM
    (37) number -> . FLOATNUM
    (35) var -> . ID
    (27) matrix -> . [ vectors ]
    (31) matrix_function -> . function_name ( INTNUM )
    (70) uminus -> . - expression
    (71) transposition -> . expression '
    (43) matrix_element -> . ID [ INTNUM , INTNUM ]
    (42) vector_element -> . ID [ INTNUM ]
    (32) function_name -> . EYE
    (33) function_name -> . ONES
    (34) function_name -> . ZEROS

    INTNUM          shift and go to state 43
    FLOATNUM        shift and go to state 44
    ID              shift and go to state 18
    [               shift and go to state 45
    -               shift and go to state 42
    EYE             shift and go to state 47
    ONES            shift and go to state 48
    ZEROS           shift and go to state 49

    expression                     shift and go to state 33
    number                         shift and go to state 34
    var                            shift and go to state 35
    matrix                         shift and go to state 36
    matrix_function                shift and go to state 37
    uminus                         shift and go to state 38
    transposition                  shift and go to state 39
    matrix_element                 shift and go to state 40
    vector_element                 shift and go to state 41
    function_name                  shift and go to state 46

state 13

    (11) sys_instruction -> BREAK .

    ;               reduce using rule 11 (sys_instruction -> BREAK .)


state 14

    (12) sys_instruction -> CONTINUE .

    ;               reduce using rule 12 (sys_instruction -> CONTINUE .)


state 15

    (13) sys_instruction -> PRINT . print_values
    (72) print_values -> . print_values , string
    (73) print_values -> . print_values , expression
    (74) print_values -> . string
    (75) print_values -> . expression
    (38) string -> . STRING
    (48) expression -> . number
    (49) expression -> . var
    (50) expression -> . matrix
    (51) expression -> . matrix_function
    (52) expression -> . uminus
    (53) expression -> . transposition
    (54) expression -> . matrix_element
    (55) expression -> . vector_element
    (56) expression -> . expression + expression
    (57) expression -> . expression - expression
    (58) expression -> . expression * expression
    (59) expression -> . expression / expression
    (60) expression -> . expression DOTADD expression
    (61) expression -> . expression DOTSUB expression
    (62) expression -> . expression DOTMUL expression
    (63) expression -> . expression DOTDIV expression
    (36) number -> . INTNUM
    (37) number -> . FLOATNUM
    (35) var -> . ID
    (27) matrix -> . [ vectors ]
    (31) matrix_function -> . function_name ( INTNUM )
    (70) uminus -> . - expression
    (71) transposition -> . expression '
    (43) matrix_element -> . ID [ INTNUM , INTNUM ]
    (42) vector_element -> . ID [ INTNUM ]
    (32) function_name -> . EYE
    (33) function_name -> . ONES
    (34) function_name -> . ZEROS

    STRING          shift and go to state 53
    INTNUM          shift and go to state 43
    FLOATNUM        shift and go to state 44
    ID              shift and go to state 18
    [               shift and go to state 45
    -               shift and go to state 42
    EYE             shift and go to state 47
    ONES            shift and go to state 48
    ZEROS           shift and go to state 49

    print_values                   shift and go to state 50
    string                         shift and go to state 51
    expression                     shift and go to state 52
    number                         shift and go to state 34
    var                            shift and go to state 35
    matrix                         shift and go to state 36
    matrix_function                shift and go to state 37
    uminus                         shift and go to state 38
    transposition                  shift and go to state 39
    matrix_element                 shift and go to state 40
    vector_element                 shift and go to state 41
    function_name                  shift and go to state 46

state 16

    (20) assignment -> matrix_element . assignment_operator expression
    (22) assignment_operator -> . =
    (23) assignment_operator -> . ADDASSIGN
    (24) assignment_operator -> . SUBASSIGN
    (25) assignment_operator -> . MULASSIGN
    (26) assignment_operator -> . DIVASSIGN

    =               shift and go to state 27
    ADDASSIGN       shift and go to state 28
    SUBASSIGN       shift and go to state 29
    MULASSIGN       shift and go to state 30
    DIVASSIGN       shift and go to state 31

    assignment_operator            shift and go to state 54

state 17

    (21) assignment -> vector_element . assignment_operator expression
    (22) assignment_operator -> . =
    (23) assignment_operator -> . ADDASSIGN
    (24) assignment_operator -> . SUBASSIGN
    (25) assignment_operator -> . MULASSIGN
    (26) assignment_operator -> . DIVASSIGN

    =               shift and go to state 27
    ADDASSIGN       shift and go to state 28
    SUBASSIGN       shift and go to state 29
    MULASSIGN       shift and go to state 30
    DIVASSIGN       shift and go to state 31

    assignment_operator            shift and go to state 55

state 18

    (35) var -> ID .
    (43) matrix_element -> ID . [ INTNUM , INTNUM ]
    (42) vector_element -> ID . [ INTNUM ]

    =               reduce using rule 35 (var -> ID .)
    ADDASSIGN       reduce using rule 35 (var -> ID .)
    SUBASSIGN       reduce using rule 35 (var -> ID .)
    MULASSIGN       reduce using rule 35 (var -> ID .)
    DIVASSIGN       reduce using rule 35 (var -> ID .)
    +               reduce using rule 35 (var -> ID .)
    -               reduce using rule 35 (var -> ID .)
    *               reduce using rule 35 (var -> ID .)
    /               reduce using rule 35 (var -> ID .)
    DOTADD          reduce using rule 35 (var -> ID .)
    DOTSUB          reduce using rule 35 (var -> ID .)
    DOTMUL          reduce using rule 35 (var -> ID .)
    DOTDIV          reduce using rule 35 (var -> ID .)
    '               reduce using rule 35 (var -> ID .)
    ;               reduce using rule 35 (var -> ID .)
    ,               reduce using rule 35 (var -> ID .)
    EQ              reduce using rule 35 (var -> ID .)
    NE              reduce using rule 35 (var -> ID .)
    LE              reduce using rule 35 (var -> ID .)
    GE              reduce using rule 35 (var -> ID .)
    LT              reduce using rule 35 (var -> ID .)
    GT              reduce using rule 35 (var -> ID .)
    :               reduce using rule 35 (var -> ID .)
    )               reduce using rule 35 (var -> ID .)
    {               reduce using rule 35 (var -> ID .)
    IF              reduce using rule 35 (var -> ID .)
    FOR             reduce using rule 35 (var -> ID .)
    WHILE           reduce using rule 35 (var -> ID .)
    RETURN          reduce using rule 35 (var -> ID .)
    BREAK           reduce using rule 35 (var -> ID .)
    CONTINUE        reduce using rule 35 (var -> ID .)
    PRINT           reduce using rule 35 (var -> ID .)
    ID              reduce using rule 35 (var -> ID .)
    [               shift and go to state 56


state 19

    (5) instructions -> instructions instruction .

    {               reduce using rule 5 (instructions -> instructions instruction .)
    IF              reduce using rule 5 (instructions -> instructions instruction .)
    FOR             reduce using rule 5 (instructions -> instructions instruction .)
    WHILE           reduce using rule 5 (instructions -> instructions instruction .)
    RETURN          reduce using rule 5 (instructions -> instructions instruction .)
    BREAK           reduce using rule 5 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instructions instruction .)
    PRINT           reduce using rule 5 (instructions -> instructions instruction .)
    ID              reduce using rule 5 (instructions -> instructions instruction .)
    $end            reduce using rule 5 (instructions -> instructions instruction .)
    }               reduce using rule 5 (instructions -> instructions instruction .)


state 20

    (7) instruction -> sys_instruction ; .

    {               reduce using rule 7 (instruction -> sys_instruction ; .)
    IF              reduce using rule 7 (instruction -> sys_instruction ; .)
    FOR             reduce using rule 7 (instruction -> sys_instruction ; .)
    WHILE           reduce using rule 7 (instruction -> sys_instruction ; .)
    RETURN          reduce using rule 7 (instruction -> sys_instruction ; .)
    BREAK           reduce using rule 7 (instruction -> sys_instruction ; .)
    CONTINUE        reduce using rule 7 (instruction -> sys_instruction ; .)
    PRINT           reduce using rule 7 (instruction -> sys_instruction ; .)
    ID              reduce using rule 7 (instruction -> sys_instruction ; .)
    $end            reduce using rule 7 (instruction -> sys_instruction ; .)
    }               reduce using rule 7 (instruction -> sys_instruction ; .)
    ELSE            reduce using rule 7 (instruction -> sys_instruction ; .)


state 21

    (8) instruction -> assignment ; .

    {               reduce using rule 8 (instruction -> assignment ; .)
    IF              reduce using rule 8 (instruction -> assignment ; .)
    FOR             reduce using rule 8 (instruction -> assignment ; .)
    WHILE           reduce using rule 8 (instruction -> assignment ; .)
    RETURN          reduce using rule 8 (instruction -> assignment ; .)
    BREAK           reduce using rule 8 (instruction -> assignment ; .)
    CONTINUE        reduce using rule 8 (instruction -> assignment ; .)
    PRINT           reduce using rule 8 (instruction -> assignment ; .)
    ID              reduce using rule 8 (instruction -> assignment ; .)
    $end            reduce using rule 8 (instruction -> assignment ; .)
    }               reduce using rule 8 (instruction -> assignment ; .)
    ELSE            reduce using rule 8 (instruction -> assignment ; .)


state 22

    (9) instruction -> { instructions . }
    (5) instructions -> instructions . instruction
    (7) instruction -> . sys_instruction ;
    (8) instruction -> . assignment ;
    (9) instruction -> . { instructions }
    (14) instruction -> . IF ( condition ) instruction
    (15) instruction -> . IF ( condition ) instruction ELSE instruction
    (16) instruction -> . FOR var = range instruction
    (18) instruction -> . WHILE ( condition ) instruction
    (10) sys_instruction -> . RETURN expression
    (11) sys_instruction -> . BREAK
    (12) sys_instruction -> . CONTINUE
    (13) sys_instruction -> . PRINT print_values
    (19) assignment -> . var assignment_operator expression
    (20) assignment -> . matrix_element assignment_operator expression
    (21) assignment -> . vector_element assignment_operator expression
    (35) var -> . ID
    (43) matrix_element -> . ID [ INTNUM , INTNUM ]
    (42) vector_element -> . ID [ INTNUM ]

    }               shift and go to state 57
    {               shift and go to state 7
    IF              shift and go to state 8
    FOR             shift and go to state 9
    WHILE           shift and go to state 11
    RETURN          shift and go to state 12
    BREAK           shift and go to state 13
    CONTINUE        shift and go to state 14
    PRINT           shift and go to state 15
    ID              shift and go to state 18

    instruction                    shift and go to state 19
    sys_instruction                shift and go to state 5
    assignment                     shift and go to state 6
    var                            shift and go to state 10
    matrix_element                 shift and go to state 16
    vector_element                 shift and go to state 17

state 23

    (14) instruction -> IF ( . condition ) instruction
    (15) instruction -> IF ( . condition ) instruction ELSE instruction
    (64) condition -> . expression EQ expression
    (65) condition -> . expression NE expression
    (66) condition -> . expression LE expression
    (67) condition -> . expression GE expression
    (68) condition -> . expression LT expression
    (69) condition -> . expression GT expression
    (48) expression -> . number
    (49) expression -> . var
    (50) expression -> . matrix
    (51) expression -> . matrix_function
    (52) expression -> . uminus
    (53) expression -> . transposition
    (54) expression -> . matrix_element
    (55) expression -> . vector_element
    (56) expression -> . expression + expression
    (57) expression -> . expression - expression
    (58) expression -> . expression * expression
    (59) expression -> . expression / expression
    (60) expression -> . expression DOTADD expression
    (61) expression -> . expression DOTSUB expression
    (62) expression -> . expression DOTMUL expression
    (63) expression -> . expression DOTDIV expression
    (36) number -> . INTNUM
    (37) number -> . FLOATNUM
    (35) var -> . ID
    (27) matrix -> . [ vectors ]
    (31) matrix_function -> . function_name ( INTNUM )
    (70) uminus -> . - expression
    (71) transposition -> . expression '
    (43) matrix_element -> . ID [ INTNUM , INTNUM ]
    (42) vector_element -> . ID [ INTNUM ]
    (32) function_name -> . EYE
    (33) function_name -> . ONES
    (34) function_name -> . ZEROS

    INTNUM          shift and go to state 43
    FLOATNUM        shift and go to state 44
    ID              shift and go to state 18
    [               shift and go to state 45
    -               shift and go to state 42
    EYE             shift and go to state 47
    ONES            shift and go to state 48
    ZEROS           shift and go to state 49

    condition                      shift and go to state 58
    expression                     shift and go to state 59
    number                         shift and go to state 34
    var                            shift and go to state 35
    matrix                         shift and go to state 36
    matrix_function                shift and go to state 37
    uminus                         shift and go to state 38
    transposition                  shift and go to state 39
    matrix_element                 shift and go to state 40
    vector_element                 shift and go to state 41
    function_name                  shift and go to state 46

state 24

    (16) instruction -> FOR var . = range instruction

    =               shift and go to state 60


state 25

    (35) var -> ID .

    =               reduce using rule 35 (var -> ID .)


state 26

    (19) assignment -> var assignment_operator . expression
    (48) expression -> . number
    (49) expression -> . var
    (50) expression -> . matrix
    (51) expression -> . matrix_function
    (52) expression -> . uminus
    (53) expression -> . transposition
    (54) expression -> . matrix_element
    (55) expression -> . vector_element
    (56) expression -> . expression + expression
    (57) expression -> . expression - expression
    (58) expression -> . expression * expression
    (59) expression -> . expression / expression
    (60) expression -> . expression DOTADD expression
    (61) expression -> . expression DOTSUB expression
    (62) expression -> . expression DOTMUL expression
    (63) expression -> . expression DOTDIV expression
    (36) number -> . INTNUM
    (37) number -> . FLOATNUM
    (35) var -> . ID
    (27) matrix -> . [ vectors ]
    (31) matrix_function -> . function_name ( INTNUM )
    (70) uminus -> . - expression
    (71) transposition -> . expression '
    (43) matrix_element -> . ID [ INTNUM , INTNUM ]
    (42) vector_element -> . ID [ INTNUM ]
    (32) function_name -> . EYE
    (33) function_name -> . ONES
    (34) function_name -> . ZEROS

    INTNUM          shift and go to state 43
    FLOATNUM        shift and go to state 44
    ID              shift and go to state 18
    [               shift and go to state 45
    -               shift and go to state 42
    EYE             shift and go to state 47
    ONES            shift and go to state 48
    ZEROS           shift and go to state 49

    var                            shift and go to state 35
    expression                     shift and go to state 61
    number                         shift and go to state 34
    matrix                         shift and go to state 36
    matrix_function                shift and go to state 37
    uminus                         shift and go to state 38
    transposition                  shift and go to state 39
    matrix_element                 shift and go to state 40
    vector_element                 shift and go to state 41
    function_name                  shift and go to state 46

state 27

    (22) assignment_operator -> = .

    INTNUM          reduce using rule 22 (assignment_operator -> = .)
    FLOATNUM        reduce using rule 22 (assignment_operator -> = .)
    ID              reduce using rule 22 (assignment_operator -> = .)
    [               reduce using rule 22 (assignment_operator -> = .)
    -               reduce using rule 22 (assignment_operator -> = .)
    EYE             reduce using rule 22 (assignment_operator -> = .)
    ONES            reduce using rule 22 (assignment_operator -> = .)
    ZEROS           reduce using rule 22 (assignment_operator -> = .)


state 28

    (23) assignment_operator -> ADDASSIGN .

    INTNUM          reduce using rule 23 (assignment_operator -> ADDASSIGN .)
    FLOATNUM        reduce using rule 23 (assignment_operator -> ADDASSIGN .)
    ID              reduce using rule 23 (assignment_operator -> ADDASSIGN .)
    [               reduce using rule 23 (assignment_operator -> ADDASSIGN .)
    -               reduce using rule 23 (assignment_operator -> ADDASSIGN .)
    EYE             reduce using rule 23 (assignment_operator -> ADDASSIGN .)
    ONES            reduce using rule 23 (assignment_operator -> ADDASSIGN .)
    ZEROS           reduce using rule 23 (assignment_operator -> ADDASSIGN .)


state 29

    (24) assignment_operator -> SUBASSIGN .

    INTNUM          reduce using rule 24 (assignment_operator -> SUBASSIGN .)
    FLOATNUM        reduce using rule 24 (assignment_operator -> SUBASSIGN .)
    ID              reduce using rule 24 (assignment_operator -> SUBASSIGN .)
    [               reduce using rule 24 (assignment_operator -> SUBASSIGN .)
    -               reduce using rule 24 (assignment_operator -> SUBASSIGN .)
    EYE             reduce using rule 24 (assignment_operator -> SUBASSIGN .)
    ONES            reduce using rule 24 (assignment_operator -> SUBASSIGN .)
    ZEROS           reduce using rule 24 (assignment_operator -> SUBASSIGN .)


state 30

    (25) assignment_operator -> MULASSIGN .

    INTNUM          reduce using rule 25 (assignment_operator -> MULASSIGN .)
    FLOATNUM        reduce using rule 25 (assignment_operator -> MULASSIGN .)
    ID              reduce using rule 25 (assignment_operator -> MULASSIGN .)
    [               reduce using rule 25 (assignment_operator -> MULASSIGN .)
    -               reduce using rule 25 (assignment_operator -> MULASSIGN .)
    EYE             reduce using rule 25 (assignment_operator -> MULASSIGN .)
    ONES            reduce using rule 25 (assignment_operator -> MULASSIGN .)
    ZEROS           reduce using rule 25 (assignment_operator -> MULASSIGN .)


state 31

    (26) assignment_operator -> DIVASSIGN .

    INTNUM          reduce using rule 26 (assignment_operator -> DIVASSIGN .)
    FLOATNUM        reduce using rule 26 (assignment_operator -> DIVASSIGN .)
    ID              reduce using rule 26 (assignment_operator -> DIVASSIGN .)
    [               reduce using rule 26 (assignment_operator -> DIVASSIGN .)
    -               reduce using rule 26 (assignment_operator -> DIVASSIGN .)
    EYE             reduce using rule 26 (assignment_operator -> DIVASSIGN .)
    ONES            reduce using rule 26 (assignment_operator -> DIVASSIGN .)
    ZEROS           reduce using rule 26 (assignment_operator -> DIVASSIGN .)


state 32

    (18) instruction -> WHILE ( . condition ) instruction
    (64) condition -> . expression EQ expression
    (65) condition -> . expression NE expression
    (66) condition -> . expression LE expression
    (67) condition -> . expression GE expression
    (68) condition -> . expression LT expression
    (69) condition -> . expression GT expression
    (48) expression -> . number
    (49) expression -> . var
    (50) expression -> . matrix
    (51) expression -> . matrix_function
    (52) expression -> . uminus
    (53) expression -> . transposition
    (54) expression -> . matrix_element
    (55) expression -> . vector_element
    (56) expression -> . expression + expression
    (57) expression -> . expression - expression
    (58) expression -> . expression * expression
    (59) expression -> . expression / expression
    (60) expression -> . expression DOTADD expression
    (61) expression -> . expression DOTSUB expression
    (62) expression -> . expression DOTMUL expression
    (63) expression -> . expression DOTDIV expression
    (36) number -> . INTNUM
    (37) number -> . FLOATNUM
    (35) var -> . ID
    (27) matrix -> . [ vectors ]
    (31) matrix_function -> . function_name ( INTNUM )
    (70) uminus -> . - expression
    (71) transposition -> . expression '
    (43) matrix_element -> . ID [ INTNUM , INTNUM ]
    (42) vector_element -> . ID [ INTNUM ]
    (32) function_name -> . EYE
    (33) function_name -> . ONES
    (34) function_name -> . ZEROS

    INTNUM          shift and go to state 43
    FLOATNUM        shift and go to state 44
    ID              shift and go to state 18
    [               shift and go to state 45
    -               shift and go to state 42
    EYE             shift and go to state 47
    ONES            shift and go to state 48
    ZEROS           shift and go to state 49

    condition                      shift and go to state 62
    expression                     shift and go to state 59
    number                         shift and go to state 34
    var                            shift and go to state 35
    matrix                         shift and go to state 36
    matrix_function                shift and go to state 37
    uminus                         shift and go to state 38
    transposition                  shift and go to state 39
    matrix_element                 shift and go to state 40
    vector_element                 shift and go to state 41
    function_name                  shift and go to state 46

state 33

    (10) sys_instruction -> RETURN expression .
    (56) expression -> expression . + expression
    (57) expression -> expression . - expression
    (58) expression -> expression . * expression
    (59) expression -> expression . / expression
    (60) expression -> expression . DOTADD expression
    (61) expression -> expression . DOTSUB expression
    (62) expression -> expression . DOTMUL expression
    (63) expression -> expression . DOTDIV expression
    (71) transposition -> expression . '

    ;               reduce using rule 10 (sys_instruction -> RETURN expression .)
    +               shift and go to state 63
    -               shift and go to state 64
    *               shift and go to state 65
    /               shift and go to state 66
    DOTADD          shift and go to state 67
    DOTSUB          shift and go to state 68
    DOTMUL          shift and go to state 69
    DOTDIV          shift and go to state 70
    '               shift and go to state 71


state 34

    (48) expression -> number .
